...
                android:textAllCaps="false"
                android:textColor="@color/text_on_color"
                android:textSize="14sp"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:background="@drawable/bg_button_green"
                android:minHeight="0dp"
                android:paddingTop="@dimen/space_sm"
                android:paddingBottom="@dimen/space_sm"
                android:text="@string/account_logout"
                android:textAllCaps="false"
                android:textColor="@color/text_on_color"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>
...
