...
            android:layout_marginStart="@dimen/space_md"
            android:layout_marginEnd="@dimen/space_xs"
            android:minWidth="0dp"
            android:orientation="vertical"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/layoutAvatarAction"
            app:layout_constraintEnd_toStartOf="@id/btnExitCustomerPreview"
            app:layout_constraintStart_toEndOf="@id/layoutAvatarAction"
            app:layout_constraintTop_toTopOf="@id/layoutAvatarAction">

            <TextView
                android:id="@+id/tvGreeting"
                android:layout_width="match_parent"
...
